dist_man1_MANS=

if BUILD_LITECOINFINANCED
  dist_man1_MANS+=litecoinfinanced.1
endif

if ENABLE_QT
  dist_man1_MANS+=litecoinfinance-qt.1
endif

if BUILD_LITECOINFINANCE_CLI
  dist_man1_MANS+=litecoinfinance-cli.1
endif

if BUILD_LITECOINFINANCE_TX
  dist_man1_MANS+=litecoinfinance-tx.1
endif

if ENABLE_WALLET
if BUILD_LITECOINFINANCE_WALLET
  dist_man1_MANS+=litecoinfinance-wallet.1
endif
endif
